CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(Samples C)

SET(SOURCE_FILES "")

LIST(APPEND SOURCE_FILES src/benchmark.c)
ADD_EXECUTABLE(benchmark src/benchmark.c)

LIST(APPEND SOURCE_FILES src/info.c)
ADD_EXECUTABLE(info src/info.c)

LIST(APPEND SOURCE_FILES src/md5sum.c)
ADD_EXECUTABLE(md5sum src/md5sum.c)

LIST(APPEND SOURCE_FILES src/version.c)
ADD_EXECUTABLE(version src/version.c)

SOURCE_GROUP("Source" FILES ${SOURCE_FILES})

SET(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include)

TARGET_INCLUDE_DIRECTORIES(benchmark PUBLIC ${INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(benchmark PRIVATE ORDO_STATIC_LIB)
TARGET_INCLUDE_DIRECTORIES(info PUBLIC ${INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(info PRIVATE ORDO_STATIC_LIB)
TARGET_INCLUDE_DIRECTORIES(md5sum PUBLIC ${INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(md5sum PRIVATE ORDO_STATIC_LIB)
TARGET_INCLUDE_DIRECTORIES(version PUBLIC ${INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS(version PRIVATE ORDO_STATIC_LIB)

TARGET_LINK_LIBRARIES(benchmark ordo_s)
TARGET_LINK_LIBRARIES(info      ordo_s)
TARGET_LINK_LIBRARIES(md5sum    ordo_s)
TARGET_LINK_LIBRARIES(version   ordo_s)
