CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(Samples C)

SET(SOURCE_FILES "")

LIST(APPEND SOURCE_FILES src/benchmark.c)
ADD_EXECUTABLE(benchmark src/benchmark.c)

LIST(APPEND SOURCE_FILES src/info.c)
ADD_EXECUTABLE(info src/info.c)

LIST(APPEND SOURCE_FILES src/hashsum.c)
ADD_EXECUTABLE(hashsum src/hashsum.c)

LIST(APPEND SOURCE_FILES src/version.c)
ADD_EXECUTABLE(version src/version.c)

SOURCE_GROUP("Source" FILES ${SOURCE_FILES})

SET(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include)

TARGET_INCLUDE_DIRECTORIES(benchmark    PUBLIC ${INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(info         PUBLIC ${INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(hashsum      PUBLIC ${INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(version      PUBLIC ${INCLUDE_DIRS})

TARGET_COMPILE_DEFINITIONS(benchmark    PRIVATE ORDO_STATIC_LIB)
TARGET_COMPILE_DEFINITIONS(info         PRIVATE ORDO_STATIC_LIB)
TARGET_COMPILE_DEFINITIONS(hashsum      PRIVATE ORDO_STATIC_LIB)
TARGET_COMPILE_DEFINITIONS(version      PRIVATE ORDO_STATIC_LIB)

TARGET_COMPILE_DEFINITIONS(benchmark    PRIVATE _CRT_SECURE_NO_WARNINGS)
TARGET_COMPILE_DEFINITIONS(info         PRIVATE _CRT_SECURE_NO_WARNINGS)
TARGET_COMPILE_DEFINITIONS(hashsum      PRIVATE _CRT_SECURE_NO_WARNINGS)
TARGET_COMPILE_DEFINITIONS(version      PRIVATE _CRT_SECURE_NO_WARNINGS)

TARGET_LINK_LIBRARIES(benchmark    ordo_s)
TARGET_LINK_LIBRARIES(info         ordo_s)
TARGET_LINK_LIBRARIES(hashsum      ordo_s)
TARGET_LINK_LIBRARIES(version      ordo_s)
